--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,10 @@ a {
     text-decoration: none;
 }
 
+.section {
+    margin-bottom: 3rem;
+}
+
 /* Reuseable Layout */
 .bd-grid {
     max-width: 1076px;
@@ -119,7 +123,7 @@ a {
 
 .mission__module {
     border-radius: .625rem;
-    padding: 1rem;
+    padding: 1.5rem 1rem;
     background-color: #fff;
 }
 
@@ -137,4 +141,10 @@ a {
 
 .mission__module:nth-child(3) {
     background-color: #fff4d6;
+}
+
+.develop {
+    margin-left: auto;
+    margin-right: auto;
+    grid-template-columns: 1fr 2fr;
 }
