--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,3 +148,9 @@ a {
     margin-right: auto;
     grid-template-columns: 1fr 2fr;
 }
+
+.community {
+    margin-left: auto;
+    margin-right: auto;
+    grid-template-columns: 2fr 1fr;
+}
