--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,3 +154,12 @@ a {
     margin-right: auto;
     grid-template-columns: 2fr 1fr;
 }
+
+.footer {
+    padding: 1.5rem 0; 
+}
+
+p {
+    text-align: center;
+    margin-bottom: 1rem;
+}
