--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 /* Add "Yeseva", "Lobster" and "Poppins" fonts from fonts.google.com */
-@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Poppins:wght@400;600;700&family=Yeseva+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Manrope&family=Poppins:wght@400;600;700&family=Yeseva+One&display=swap');
 
 /* Base */
 * {
@@ -189,13 +189,80 @@ p {
     grid-template-columns: 2fr 1.33fr;
 }
 
-.footer {
-    background-color: #333;
-    padding: 1.5rem 0;
+/* Start Service Area */
+.service {
+    margin-left: auto;
+    margin-right: auto;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 2.5rem;
+    margin-top: 1rem;
 }
 
-.footer>p {
+.service__title {
+    font-size: 2rem;
+    font-weight: 600;
+    color: #1d2043;
+    margin-bottom: 2rem;
+}
+
+.service__text {
+    font-size: 1rem;
+    margin-bottom: 3rem;
+    color: #444444;
+}
+
+.service__list {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 1.5rem;
+}
+
+.service__item {
+    display: flex;
+    align-items: center;
+}
+
+.service__item h3 {
+    font-weight: 400;
+    margin-left: .625rem;
+}
+
+.service__item>div {
+    width: 42px;
+    height: 42px;
+    border-radius: 50%;
+    background-image: linear-gradient(45deg, #ff5959, #ec7878);
     text-align: center;
-    margin-bottom: 1rem;
+}
+
+.service__icon {
+    text-align: center;
+    line-height: 42px;
+    font-size: 1.25rem;
     color: #fff;
+}
+
+/* Start Footer area */
+.footer {
+    height: 170px;
+    background-color: #0B0D17;
+}
+
+.footer__text {
+    font-family: 'Lobster', cursive;
+    font-size: 2.25rem;
+    color: #fff;
+    text-align: center;
+    padding: 2.5rem 0 .625rem;
+}
+
+.footer__text--color {
+    color: #ff5959;
+}
+
+.footer__copywrite {
+    font-family: 'Manrope', sans-serif;
+    color: #D9DBE1;
+    font-size: .875rem;
+    text-align: center;
 }
