--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-/* Add "Yeseva", "Lobster" and "Poppins" fonts from fonts.google.com */
+/* Add "Yeseva", "Lobster", "Manrope" and "Poppins" fonts from fonts.google.com */
 @import url('https://fonts.googleapis.com/css2?family=Lobster&family=Manrope&family=Poppins:wght@400;600;700&family=Yeseva+One&display=swap');
 
 /* Base */
@@ -9,6 +9,7 @@
 }
 
 html {
+    /* For Smooth scrolling */
     scroll-behavior: smooth;
 }
 
@@ -93,7 +94,6 @@ p {
     padding: .75rem 2.125rem;
     border-radius: 5px;
     margin-top: 1.25rem;
-
 }
 
 .btn-link--orange {
